<resources>
    <string name="app_name">MiASample</string>
    <string name="amount">Amount</string>
    <string name="default_amount">10.00</string>
    <string name="buy">Buy</string>
    <string name="total">Total</string>
    <string name="error_title">Error</string>
    <string name="success_title">Success</string>
    <string name="canceled_title">Canceled</string>
    <string name="transaction_canceled">Process is canceled.</string>
    <string name="success_message">Process is successful</string>
    <string name="error_message">There was an error.\nPlease try again later.</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="image_placeholder">ImagePlaceholder</string>
    <string name="amount_error">Please add a non-zero amount</string>
    <string name="action_close">Close</string>
    <string name="action_open">Open</string>
    <string name="settings">Settings</string>
    <string name="configuration">Configuration</string>
    <string name="prod_environment">Prod Environment</string>
    <string name="charge_payment">Charge Payment</string>
    <string name="change_secret_keys">Change secret keys</string>
    <string name="clear_cache_cookies">Clear cookies/caches</string>
    <string name="action_change">Change</string>
    <string name="action_clear">Clear</string>
    <string name="test_environment">Test Environment</string>
    <string name="secret_key">Secret Key</string>
    <string name="checkout_key">Checkout Key</string>
    <string name="production_environment">Production Environment</string>
    <string name="save">Save</string>
    <string name="secret_keys_title">Secret Keys</string>
    <string name="new_configuration">New Secret Keys</string>
    <string name="secret">Secret</string>
    <string name="checkout">Checkout</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="clear_cookies_description">Clearing cache/cookies is needed to reset the Easy profile. Please go to Settings and clear the application data.</string>
    <string name="integration_type">Integration type</string>
    <string name="handle_consumer_data">Handling of consumer data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2_optional">Address line 2 (Optional)</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="prefix">Prefix</string>
    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update_profile_details">Please update the following details in the Profile page in the Settings</string>
    <string name="asterisk">*</string>
    <string name="add_valid_email_address">Please add valid email address</string>
    <string name="sample_Prefix">+47</string>
    <string name="address_hint">Address</string>
    <string name="valid_postal_code">Please enter valid postal code</string>

    <string name="subscribe">Subscribe</string>
    <string name="show_subscriptions">Show Subscriptions</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="charge">Charge</string>
    <string name="add">Add</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="charge_subscription">Charge subscription</string>
    <string name="charge_disabled">Charging Disabled</string>
    <string name="charge_successful">Charge Successful</string>
    <string name="subscription_created">New Subscription Created</string>
    <string name="no_subscription_error">There are no subscriptions</string>
    <string name="enable_charge">Charging can be enabled in Settings when activating developer mode</string>

    <string name="create_subscription_alert">Order amount %1$.2f %2$s will be charged!\n\n(The subscription will be created with charge interval of 0, therefore chargeable anytime using the payment method added when creating the subscription)</string>
    <string name="charge_subscription_alert">Order Amount: %1$.2f %2$s</string>
    <string name="subscription_created_alert">Subscription ID:\n%1$s</string>
    <string name="charge_successful_details">Charge ID:\n%1$s\nPayment ID:\n%2$s</string>

    <string name="hint_mobile_number">912 34 567</string>

    <string name="environment_type">Environment</string>


</resources>
