<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eu.nets.miasample.activity.InputKeysActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/actionSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <ScrollView
        android:id="@+id/secretKeysView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/InputKeysHeader"
                android:text="@string/test_environment" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/secret_key" />

            <EditText
                android:id="@+id/testSecretKey"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:nextFocusDown="@id/testCheckoutKey" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/checkout_key" />

            <EditText
                android:id="@+id/testCheckoutKey"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:nextFocusDown="@id/prodSecretKey" />

            <TextView
                style="@style/InputKeysHeader"
                android:layout_marginTop="20dp"
                android:text="@string/production_environment" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/secret_key" />

            <EditText
                android:id="@+id/prodSecretKey"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusDown="@id/prodCheckoutKey" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/checkout_key" />

            <EditText
                android:id="@+id/prodCheckoutKey"
                style="@style/InputKeysEditText"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/editProfileView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/firstName"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:hint="@string/first_name"
                android:inputType="text" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/lastName"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/last_name"
                android:nextFocusDown="@id/email" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:nextFocusDown="@id/phonePrefix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/InputKeysLabel"
                        android:text="@string/prefix" />

                    <EditText
                        android:id="@+id/phonePrefix"
                        style="@style/InputKeysEditText"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="4"
                        android:hint="@string/sample_Prefix"
                        android:nextFocusDown="@id/phoneNumber" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <TextView
                        style="@style/InputKeysLabel"
                        android:text="@string/mobile_number" />

                    <EditText
                        android:id="@+id/phoneNumber"
                        style="@style/InputKeysEditText"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:hint="@string/mobile_number"
                        android:nextFocusDown="@id/addressLineOne" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/address_line_1" />

            <EditText
                android:id="@+id/addressLineOne"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/address_hint"
                android:nextFocusDown="@id/addressLineTwo" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/address_line_2_optional" />

            <EditText
                android:id="@+id/addressLineTwo"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/address_hint"
                android:nextFocusDown="@id/postalCode" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/postal_code" />

            <EditText
                android:id="@+id/postalCode"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="8"
                android:hint="@string/postal_code"
                android:nextFocusDown="@id/city" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/city" />

            <EditText
                android:id="@+id/city"
                style="@style/InputKeysEditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/city"
                android:nextFocusDown="@id/countrySpinner" />

            <TextView
                style="@style/InputKeysLabel"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/countrySpinner"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:padding="2dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
