<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/ConfigConfirmationHeaderLabel"
        android:text="@string/test_environment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/ConfigConfirmationTypeLabel"
            android:text="@string/secret" />

        <TextView
            android:id="@+id/testSecretKey"
            style="@style/ConfigConfirmationValueLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/ConfigConfirmationTypeLabel"
            android:text="@string/checkout" />

        <TextView
            android:id="@+id/testCheckoutKey"
            style="@style/ConfigConfirmationValueLabel" />

    </LinearLayout>


    <TextView
        style="@style/ConfigConfirmationHeaderLabel"
        android:layout_marginTop="20dp"
        android:text="@string/prod_environment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/ConfigConfirmationTypeLabel"
            android:text="@string/secret" />

        <TextView
            android:id="@+id/prodSecretKey"
            style="@style/ConfigConfirmationValueLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/ConfigConfirmationTypeLabel"
            android:text="@string/checkout" />

        <TextView
            android:id="@+id/prodCheckoutKey"
            style="@style/ConfigConfirmationValueLabel" />

    </LinearLayout>

</LinearLayout>