<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/checkoutLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_placeholder"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_header" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:elevation="2dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <ImageView
            android:id="@+id/checkoutProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkoutLogo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_placeholder"
            android:src="@drawable/shipment_fee" />

        <LinearLayout
            android:id="@+id/amountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnBuy"
            android:layout_below="@+id/checkoutProduct"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/total"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:maxWidth="100dp"
                    android:text="@string/default_amount"
                    android:textColor="#484848"
                    android:textColorHint="#b3b3b3"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/currencySpinner"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:padding="2dp" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btnBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorYellow"
            android:text="@string/buy"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray"
            android:elevation="3dp"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorYellow"
                android:indeterminateTintMode="src_in" />
        </RelativeLayout>

    </RelativeLayout>
    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <LinearLayout
        android:id="@+id/navDrawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/configuration"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod_environment"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchProdEnv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:theme="@style/SwitchStyleBasic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge_payment"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchChargePayment"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:theme="@style/SwitchStyleBasic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_secret_keys"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/changeKeys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:text="@string/action_change"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_cache_cookies"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/clearCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:text="@string/action_clear"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integration_type"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/integrationTypeSpinner"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:padding="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handle_consumer_data"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/consumerDataSpinner"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:padding="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <TextView
                android:id="@+id/fieldVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
